# goldenboot

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: update.py  update.yml
.streamlit/: config.toml
src/: about.py  app.py  standings.csv  standings.py
